# ml-classification-project

./: .gitignore  pyproject.toml  requirements.txt
reports/: metrics.csv
scripts/: make_dataset.py  run_experiment.py
src/ml_project/: dataset.py  evaluate.py  export.py  plots.py  preprocess.py  train.py
