[project]
name = "ml-classification-project"
version = "1.0.0"
description = "Beginner-friendly ML classification: Logistic Regression + Random Forest with evaluation and PNG outputs."
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "matplotlib", "scikit-learn", "tabulate"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
